# kolosal-cli

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LINUX_PACKAGING_GUIDE.md  MACOS_CODESIGNING_GUIDE.md  MACOS_DMG_PACKAGING_ANALYSIS.md  MACOS_PACKAGING_GUIDE.md  NOTICE  OLLAMA_INTEGRATION.md  README-termux.md  README.md  UNIFIED_MODEL_SELECTION.md  build-kolosal-cli.sh  build.bat  config.apple.yaml  config.linux.yaml  config.yaml  install-kolosal-termux.sh  install-kolosal.sh  install-termux.sh  install.sh  package-lock.json  package.json  run-kolosal.sh  test_chat_crash.cpp  test_ollama_client.cpp
cmake/: CopyMetalFiles.cmake  DMGSetup.scpt  complete_signing.sh  create_dmg.sh  prune_linux_package.cmake  setup_codesign.sh  setup_notarization.sh  test_codesign.sh
docs/: ARCHITECTURE.md  CACHING.md  CLI_API_SERVER.md  CODE-SIGNING.md  DISTRIBUTION.md  INSTALLATION.md  KOLOSAL_SERVER_INTEGRATION.md  NOTARIZATION-FIX.md  PACKAGE-SIZE.md  go-bubbletea-reimplementation.md  macos-packaging-fix.md  macos-pkg-quick-guide.md
include/: cache_manager.h  chat_interface.h  command_manager.h  gguf_reader.h  http_client.h  hugging_face_client.h  interactive_list.h  kolosal_cli.h  kolosal_server_client.h  loading_animation.h  model_file.h  model_file_selector.h  model_repo_selector.h  ollama_client.h  unified_model_selector.h
installer/: kolosal.iss
resources/: Info.plist  Info.plist.in  create_dmg_background.sh  kolosal-launcher.sh  kolosal.entitlements  kolosal.icns  kolosal.icns.txt
scripts/: build-mac-pkg-signed.sh  build-standalone-linux.js  build-standalone-pkg.js  build.js  build_kolosal_server.js  bundle_shared_libs.js  check_macos_dependencies.sh  clean-build-linux.sh  clean-build-sign.sh  package_macos.sh  setup-codesigning.sh
scripts/tests/: get-release-version.test.js
src/: cache_manager.cpp  chat_interface.cpp  command_manager.cpp  gguf_reader.cpp  http_client.cpp  hugging_face_client.cpp  interactive_list.cpp  kolosal_cli.cpp  kolosal_launcher.c  kolosal_server_client.cpp  loading_animation.cpp  main.cpp  model_file.cpp  model_file_selector.cpp  model_repo_selector.cpp  ollama_client.cpp  ollama_client_test.cpp  unified_model_selector.cpp
